Split library code and sample application code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script data-main="scripts/main" src="scripts/req.js"></script>
+    <script data-main="scripts/app/main" src="scripts/lib/req.js"></script>
 </head>
 <body>
 </body>
